tests/baselines/reference/asiAbstract.errors.txt
tests/cases/compiler/asiAbstract.ts(1,1): error TS2552: Cannot find name 'abstract'. Did you mean 'Array'?
tests/cases/compiler/asiAbstract.ts(3,3): error TS1244: Abstract methods can only appear within an abstract class.


==== tests/cases/compiler/asiAbstract.ts (2 errors) ====
    abstract
    ~~~~~~~~
!!! error TS2552: Cannot find name 'abstract'. Did you mean 'Array'?
    class NonAbstractClass {
      abstract s();
      ~~~~~~~~
!!! error TS1244: Abstract methods can only appear within an abstract class.
    }
    
    class C2 {
        abstract
        nonAbstractFunction() {
        }
    }
    
    class C3 {
        abstract
    }
    